--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-gesture-handler": "1.5.2",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "1.4.0",
+    "react-native-table-component": "^1.2.1",
     "react-navigation": "4.0.10",
     "react-navigation-stack": "^1.10.3"
   },
